[gd_scene load_steps=7 format=3 uid="uid://dnisxunjm7m2l"]

[ext_resource type="Script" path="res://addons/Godot Modular FPC/player.gd" id="1_o5wto"]
[ext_resource type="Texture2D" uid="uid://wmhyom30iy62" path="res://addons/Godot Modular FPC/Crosshair.png" id="2_gaihr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wqptg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xrk80"]
height = 1.3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_170wq"]
bg_color = Color(0.505882, 0.529412, 0.580392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3frje"]
bg_color = Color(0.117647, 0.694118, 0.294118, 1)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_o5wto")
Walk_Speed = 7.0
Unlimited_Sprint = true
Sprint_Speed = 11.0
Jump_Power = 6.0
throw_power = 7.0

[node name="StandCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wqptg")

[node name="CrouchCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)
shape = SubResource("CapsuleShape3D_xrk80")

[node name="HandCollisionShape" type="CollisionShape3D" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="."]
visible = false
target_position = Vector3(0, 2, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="RayHit" type="RayCast3D" parent="Head/Camera3D"]
visible = false
target_position = Vector3(0, 0, -4)
collision_mask = 13

[node name="PickUpSlot" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.738503, -0.734882)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="SprintBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_170wq")
theme_override_styles/fill = SubResource("StyleBoxFlat_3frje")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Crosshair" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(5, 5)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_gaihr")

[node name="InteractText" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = 48.0
offset_right = 55.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press LBM to pick up"

[node name="DropText" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 48.0
offset_right = 64.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press RMB to drop"
